# openseo-lens

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
openseo_lens/: __init__.py  cli.py  models.py
openseo_lens/analyzers/: __init__.py  attribution.py  crawlability.py  extractability.py  structured_data.py  tdm.py
openseo_lens/reporters/: __init__.py  html_reporter.py  json_reporter.py
tests/: test_attribution.py  test_crawlability.py  test_extractability.py  test_structured_data.py  test_tdm.py
