[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openseo-lens"
version = "0.1.0"
description = "AI Search Readiness & Web Discoverability Toolkit"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Lupu Dragos", email = "contact@signallensai.com" },
]
keywords = [
    "seo",
    "ai-search",
    "structured-data",
    "schema-org",
    "web-analysis",
    "crawlability",
    "geo",
    "generative-engine-optimization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
openseo-lens = "openseo_lens.cli:main"

[project.urls]
Homepage = "https://github.com/anthropics/openseo-lens"
Documentation = "https://github.com/anthropics/openseo-lens#readme"
Repository = "https://github.com/anthropics/openseo-lens"
Issues = "https://github.com/anthropics/openseo-lens/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
